# Chess

./: CMakeLists.txt  ChessLibConfig.cmake  README.md
examples/: CMakeLists.txt
examples/ConsoleChess/: CMakeLists.txt  main.cpp
include/Chess/: Board.hpp  Chess.hpp  Defines.hpp  Figure.hpp  Figures.hpp
include/ChessLib/: Board.hpp  Chess.hpp  Defines.hpp  Figure.hpp  Figures.hpp  IBoard.hpp  IMove.hpp  IPiece.hpp  ImplBoard.hpp  ImplMove.hpp  Move.hpp  Pieces.hpp  Position.hpp
include/ChessLib/Figures/: Queen.hpp  Rook.hpp
include/ChessLib/Piece/: Allocatable.hpp  Enums.hpp  IAllocatable.hpp  IPiece.hpp  IPieceable.hpp  MovablePiece.hpp  Piece.hpp  Pieceable.hpp  Pieces.hpp
include/ChessLib/Piece/Pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
src/: Board.cpp  Chess.cpp  Defines.cpp  Figure.cpp  Figures.cpp  IBoard.cpp  IMove.cpp  IPiece.cpp  ImplBoard.cpp  ImplMove.cpp  Move.cpp  Position.cpp
src/ChessLib/: Chess.cpp  Defines.cpp  Figures.cpp  Position.cpp
src/Figures/: Bishop.cpp  Knight.cpp  Pawn.cpp  Rook.cpp
src/Piece/: IAllocatable.cpp  IPiece.cpp  IPieceable.cpp  MovablePiece.cpp  Piece.cpp
src/Piece/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/Pieces/: King.cpp  Queen.cpp
